vinylrack img changed

--- a/welcome/templates/welcome/home.html
+++ b/welcome/templates/welcome/home.html
@@ -78,7 +78,7 @@
             </div>
 
                 <div class="col-md p-5">
-                <img src="{% static 'welcome/img/cdrack.JPG' %}" class="img-fluid" alt="">
+                <img src="{% static 'welcome/img/vinylrack.JPG' %}" class="img-fluid" alt="">
             </div>
 
         </div>
