Visitor counter added

--- a/welcome/templates/welcome/base.html
+++ b/welcome/templates/welcome/base.html
@@ -1,6 +1,7 @@
 {% load static %}
 <!doctype html>
-<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html">
+<html lang="en" xmlns="http://www.w3.org/1999/html" xmlns="http://www.w3.org/1999/html"
+      xmlns="http://www.w3.org/1999/html">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -62,11 +63,16 @@
 </ul>
 {% endif %}
 
+
+
     {% block content %}
     {% endblock %}
 
 
+
 </div>
+
+
 
 <div id="modal" class="modal fade" tabindex="-1">
   <div id="dialog" class="modal-dialog" hx-target="this">
