--- a/welcome/templates/welcome/home.html
+++ b/welcome/templates/welcome/home.html
@@ -164,6 +164,11 @@
     </section>
 
 
+<div class="alert alert-success" role="alert">
+<h3 class="text-center">
+TOTAL VISITORS : {{ count }}
+</h3>
+</div>
 
     <!-- Footer -->
     <footer class="p-5 bg-dark text-white text-center position-relative">
